Added data to preinsert during startup also test has been updated