@@ -12,12 +12,16 @@ import java.time.OffsetDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static com.app.commerce.service.Mapper.*;
+
 @UtilityClass
 public class PriceServices {
 
     public interface PriceService {
 
         List<PricesResponse> retrieveByBrandProductAndDateBetween(OffsetDateTime inputDate, String brandName, Long productId);
+
+        Map<Float, List<PricesEntity>> getGroupedRecordByPrice(OffsetDateTime inputDate, String brandName, Long productId);
     }
 
     @Value
@@ -26,29 +30,30 @@ public class PriceServices {
     public static class PriceServiceImpl implements PriceService {
         PriceRepository priceRepository;
 
+        CustomMapper customMapper;
+
         @Override
         public List<PricesResponse> retrieveByBrandProductAndDateBetween(OffsetDateTime inputDate, String brandName, Long productId) {
 
-            Map<Float, List<PricesEntity>> groupedRecordsByPrice = priceRepository().retrieveByPrice(inputDate, brandName, productId).stream()
-                    .collect(Collectors.groupingBy(PricesEntity::getPrice));
-
-            return groupedRecordsByPrice
+            List<PricesEntity> collect = this.getGroupedRecordByPrice(inputDate, brandName, productId)
                     .values()
                     .stream()
                     .flatMap(Collection::stream)
                     .max(Comparator.comparing(PricesEntity::getPriority))
-                    .stream().map(this::mapToResponse).collect(Collectors.toList());
+                    .stream()
+                    .toList();
+            double sum = collect.stream().mapToDouble(PricesEntity::getPrice).sum();
 
+            return collect.stream().map(it -> customMapper().mapToResponse(it, (float) sum)).collect(Collectors.toList());
         }
 
-        private PricesResponse mapToResponse(PricesEntity pricesEntity) {
-            return PricesResponse.builder()
-                    .brandId(pricesEntity.getBrand().getId())
-                    .endDate(pricesEntity.getEndDate())
-                    .startDate(pricesEntity.getEndDate())
-                    .productId(pricesEntity.getProductId())
-                    .priority(pricesEntity.getPriority())
-                    .build();
+        @Override
+        public Map<Float, List<PricesEntity>> getGroupedRecordByPrice(OffsetDateTime inputDate, String brandName, Long productId) {
+            Map<Float, List<PricesEntity>> collect = priceRepository()
+                    .retrieveByPrice(inputDate, brandName, productId)
+                    .stream()
+                    .collect(Collectors.groupingBy(PricesEntity::getPrice));
+            return collect;
         }
     }
 
